# PSIPP-CTC

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  css.bundle.js  index.bundle.js  index.html
config/: compare_geometric_and_explicit.yaml  make_roadmaps.yaml  planner_benchmark.yaml  planning_incrementally.yaml  roadmap_benchmark.yaml  roadmap_generation.yaml  simplify_grid.yaml
experiments/: experiments_all.sh
experiments/configs/: Berlin_100_CDT.yaml  Berlin_100_kPRM.yaml  Berlin_5000_CDT.yaml  Berlin_5000_kPRM.yaml  Berlin_700_CDT.yaml  Berlin_700_kPRM.yaml  den520d_100_CDT.yaml  den520d_100_kPRM.yaml  den520d_5000_CDT.yaml  den520d_5000_kPRM.yaml  den520d_700_CDT.yaml  den520d_700_kPRM.yaml  empty256_100_CDT.yaml  empty256_100_kPRM.yaml  empty256_5000_CDT.yaml  empty256_5000_kPRM.yaml  empty256_700_CDT.yaml  empty256_700_kPRM.yaml  generate_configs.py  maze_100_CDT.yaml  maze_100_kPRM.yaml  maze_5000_CDT.yaml  maze_5000_kPRM.yaml  maze_700_CDT.yaml  maze_700_kPRM.yaml  random_100_CDT.yaml  random_100_kPRM.yaml  random_5000_CDT.yaml  random_5000_kPRM.yaml  random_700_CDT.yaml  random_700_kPRM.yaml  room_100_CDT.yaml  room_100_kPRM.yaml  room_5000_CDT.yaml  room_5000_kPRM.yaml  room_700_CDT.yaml  room_700_kPRM.yaml  warehouse_100_CDT.yaml  warehouse_100_kPRM.yaml  warehouse_5000_CDT.yaml  (+3 more)
experiments/results/: Berlin_700_CDT.txt  den520d_100_CDT.txt  den520d_100_kPRM.txt  den520d_5000_CDT.txt  den520d_5000_kPRM.txt  den520d_700_CDT.txt  den520d_700_kPRM.txt  empty256_100_CDT.txt  empty256_100_kPRM.txt  empty256_5000_CDT.txt  empty256_5000_kPRM.txt  empty256_700_CDT.txt  empty256_700_kPRM.txt  maze_100_CDT.txt  maze_100_kPRM.txt  maze_700_CDT.txt  maze_700_kPRM.txt  random_100_CDT.txt  random_100_kPRM.txt  random_700_CDT.txt  random_700_kPRM.txt  room_100_CDT.txt  room_100_kPRM.txt  room_700_CDT.txt  room_700_kPRM.txt  warehouse_100_CDT.txt  warehouse_100_kPRM.txt  warehouse_700_CDT.txt  warehouse_700_kPRM.txt
problem_instances/roadmaps/: Berlin_1024_3_CDT.txt  Berlin_1024_3_kPRM.txt  arena.txt  arena_kPRM.txt  sample.txt  sample2.txt  sample3.txt
problem_instances/spatial/: Berlin.txt  Berlin_0_1024_simplified_3.0.txt  Berlin_0_256_simplified_3.0.txt  den520d.txt  empty256.txt  maze-128-128-1000agents.txt  maze.txt  random.txt  room-64-64-1000agents.txt  room.txt  sample.txt  sample2.txt  sample3.txt  sample4.txt  warehouse.txt
src/: planner_benchmark.cpp  roadmap_benchmark.cpp  roadmap_generation.cpp
src/base/: benchmark.hpp  collision_report.hpp  geometry_2D.hpp  geometry_2D_for_generator.hpp  input.hpp  input_spatial.hpp  load_generators.cpp  load_generators.hpp  load_planners.cpp  load_planners.hpp  load_problems.cpp  load_problems.hpp  memory_usage.hpp  planner.hpp  problem.hpp  problem_with_explicit_collisions.hpp  problem_with_geometry.hpp  problem_with_grid.hpp  problem_with_turning.hpp  roadmap_generator.hpp  spatial.hpp  spatial_planner.hpp
src/experiments/: compare_geometric_and_explicit.cpp  make_roadmaps.cpp  planning_incrementally.cpp  simplify_grid.cpp
src/planners/: PrioritizedSIPP.cpp  (+4 more)
tools/: plot_annotation_time.py  plot_bar.py  plot_graph.py  plot_graphs_for_incremental.py  plot_roadmap.py  plot_roadmaps.py  plot_runtime.py  plot_runtime_2.py  plot_soc_ratio.py  plot_soc_ratio_2.py  plot_success_rate.py  plot_success_rate_2.py  simulation.py  visualize_plan.py
(+8 files in other folders)
